--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@ body {
 }
 
 footer {
-  justify-content: center;
-  align-items: center;
+  margin-top: 100px;
+  text-align: center;
    font-size: 40px;
   color: red;
   font-weight: bold;
